# cia3ds-android

./: .gitattributes  .gitignore  .gitmodules  LICENSE  NOTICE  README.md  gradle.properties  local.properties.example  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cdn-nintendo-leaf.pem
app/src/main/java/io/github/cia3ds/: Cia3dsApp.kt
app/src/main/java/io/github/cia3ds/jni/: Cia3ds.kt
app/src/main/java/io/github/cia3ds/prefs/: OutputNamingPrefs.kt
app/src/main/java/io/github/cia3ds/seed/: SeedFetcher.kt
app/src/main/java/io/github/cia3ds/service/: DecryptionService.kt
app/src/main/java/io/github/cia3ds/ui/: AboutScreen.kt  BatchScreen.kt  DecryptScreen.kt  LogPanel.kt  MainActivity.kt  ProgressCard.kt  SettingsScreen.kt  SingleScreen.kt  Theme.kt  ThemePreference.kt
app/src/main/java/io/github/cia3ds/util/: LogStream.kt  SpaceCheck.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  tv_banner.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
native/: CMakeLists.txt  aes_armv8.c  aes_armv8.h
native/jni/: cia3ds_jni.cpp  metadata_sniff.cpp  metadata_sniff.h
native/patch/: iconv_shim.c  iconv_shim.h  ncch_flags.c  ncch_flags.h
